# amo-contacts

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  interface.rs  main.rs  xlsx.rs
src/amo/: city_impl.rs  error.rs  format_impl.rs  mod.rs
src/amo/data_types/: leads.rs  pipeline.rs
src/profit/: mod.rs
src/profit/data_types/: deal.rs  profit_data.rs
