[package]
name = "amo-contacts"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
log = "0.4.27"
reqwest = { version = "0.12.23", features = ["json"] }
rust_xlsxwriter = "0.89.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
